# CMM_Lib

./: CMakeLists.txt  README.md
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  batch__train__gmm_8cpp.html  batch__train__gmm_8cpp_source.html  classcmm_1_1_classifier-members.html  classcmm_1_1_classifier.html  classcmm_1_1_collab_m_m-members.html  classcmm_1_1_collab_m_m.html  classcmm_1_1_component-members.html  classcmm_1_1_component.html  classcmm_1_1_data-members.html  classcmm_1_1_data.html  classcmm_1_1_estimator-members.html  classcmm_1_1_estimator.html  classcmm_1_1_incremental_collab_m_m-members.html  classcmm_1_1_incremental_collab_m_m.html  classcmm_1_1_m_c_s-members.html  classcmm_1_1_m_c_s.html  classcmm_1_1_n_n_map-members.html  classcmm_1_1_n_n_map.html  classcmm_1_1_trainer-members.html  classcmm_1_1_trainer.html  classes.html  classifier_8hpp.html  classifier_8hpp_source.html  component_8cpp.html  component_8cpp_source.html  component_8hpp.html  component_8hpp_source.html  data_8cpp.html  data_8cpp_source.html  data_8hpp.html  data_8hpp_source.html  data__loaders_8py.html  data__loaders_8py_source.html  (+131 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_1.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  (+61 more)
example/: eggholder_two_class_problem.cpp  mnist_batch.cpp
include/cmm/: classifier.hpp  component.hpp  data.hpp  gmm.hpp  gmm_estimator.hpp  incr_gmm.hpp  mcs.hpp  mcs_fct.hpp  nnmap.hpp  trainer.hpp
include/iagmm/: classifier.hpp  component.hpp  data.hpp  gmm.hpp  gmm_estimator.hpp  incr_gmm.hpp  mcs.hpp  mcs_fct.hpp  nnmap.hpp  serialization.hpp  trainer.hpp
python/: data_loaders.py  error_graph.py  error_graph2.py  mnist_class_graph.py  mnist_error_graph.py  mnist_graph.py
src/: component.cpp  data.cpp  gmm.cpp  incr_gmm.cpp  mcs.cpp  nnmap.cpp  test.cpp
test/: incrgmm_test.cpp  mnist_test.cpp  multiclass_test.cpp  test.cpp  test_batch.cpp  test_em.cpp  test_false_samples.cpp  test_mvn.cpp  test_serial.cpp
tools/: batch_train_gmm.cpp  gen_archive_stat.cpp  gen_classifier_stat.py  gmm_loglikelihood.cpp  gmm_loglikelihood.py  load_archive.cpp  merged_data.py  online_train_gmm.cpp  retrain_online_dataset.py  yml_to_data_labels.cpp  yml_to_libsvm.cpp
